--- a/Notes/package.json
+++ b/Notes/package.json
@@ -3,14 +3,17 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@modelcontextprotocol/inspector": "^0.8.2",
+    "@types/bun": "latest",
+    "@types/node": "^22.14.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "scripts": {
     "build": "tsc && chmod +x  dist/*.js",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "inspect": "mcp-inspector npm run start"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
