--- a/Notes/package.json
+++ b/Notes/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "notes",
-  "module": "index.ts",
+  "name": "ai-sticky-notes",
   "type": "module",
   "devDependencies": {
     "@modelcontextprotocol/inspector": "^0.8.2",
     "@types/bun": "latest",
-    "@types/node": "^22.14.1"
+    "@types/node": "^22.14.1",
+    "shx": "^0.4.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "build": "tsc && chmod +x  dist/*.js",
+    "build": "tsc && shx chmod +x  dist/*.js",
     "start": "npm run build && node dist/index.js",
     "inspect": "mcp-inspector npm run start"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
-    "notes": ".",
     "zod": "^3.24.2"
   }
 }
